Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-33136

Crash when closing project during target setup

XMLWordPrintable

    • a627c0cd4 (master), 4d92a4945 (18.0)

      Steps to reproduce:

      • Open a (CMake) project and configure / build it
      • Close the project, delete all your kits in your settings, delete the CMakeLists.user.txt of the project
      • Open the project again
      • When the Target setup screen has opened, run "Close All Projects" from the file menu

      Expected:

      • Project closes

      Actual:

      • Qt Creator crashes

       

      ASSERT failure in QWidget: "Called object is not of the correct type (class destructor may have already run)", file /Users/mtillmanns/Qt/6.8.2/macos/lib/QtCore.framework/Headers/qobjectdefs_impl.h, line 131

       

        For Gerrit Dashboard: QTCREATORBUG-33136
        # Subject Branch Project Status CR V

            kandeler Christian Kandeler
            madwinter Marcus Tillmanns
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes