ProjectExplorer: Use dedicated guard object in TargetSetupPage

Fixes: QTCREATORBUG-33136
Change-Id: If3311bccf3cf38bfc0ae40054fb9c01c6f82a5a4
Reviewed-by: hjk <hjk@qt.io>